<resources>
    <string name="app_name">Hello</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="email">Email*</string>
    <string name="fields_are_necessary">*fields are necessary.</string>
    <string name="present_ph">Present ph.</string>

    <string name="id_example_com">Id@example.com</string>
    <string name="contact_no">Contact No.</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
</resources>
